refactor everything to work with tools as well

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  adoption_email: "An email has been sent to the owner of %{cookbook_or_tool}, alerting them of your interest."
   user:
     signed_in:  "Welcome back %{name}."
     signed_out: "You have successfully signed out."
@@ -22,7 +23,6 @@ en:
       invite_declined: "You have declined ownership of %{cookbook}."
     deprecated: "%{cookbook} deprecated in favor of %{replacement_cookbook}."
     undeprecated: "%{cookbook} is no longer deprecated."
-    adoption_email: "An email has been sent to the owner of %{cookbook}, alerting them of your interest."
     featured: "%{cookbook} is now %{state}."
     deprecate_with_deprecated_failure: "This cookbook cannot be deprecated in favor of a deprecated cookbook."
     activity: "%{maintainer} released v%{version} of the %{cookbook} cookbook."
